Clean up embedding code